// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListForm renders consistently 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ListForm
    showSave={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="new-list indigo lighten-5"
>
        <input
                className="new-list-input"
                onChange={[Function]}
                onFocus={undefined}
                placeholder="Add a list..."
                value={undefined}
        />
</div>,
      "className": "list-wrapper",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <input
            className="new-list-input"
            onChange={[Function]}
            onFocus={undefined}
            placeholder="Add a list..."
            value={undefined}
/>,
          false,
        ],
        "className": "new-list indigo lighten-5",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "new-list-input",
            "onChange": [Function],
            "onFocus": undefined,
            "placeholder": "Add a list...",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        false,
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="new-list indigo lighten-5"
>
          <input
                    className="new-list-input"
                    onChange={[Function]}
                    onFocus={undefined}
                    placeholder="Add a list..."
                    value={undefined}
          />
</div>,
        "className": "list-wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className="new-list-input"
              onChange={[Function]}
              onFocus={undefined}
              placeholder="Add a list..."
              value={undefined}
/>,
            false,
          ],
          "className": "new-list indigo lighten-5",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "new-list-input",
              "onChange": [Function],
              "onFocus": undefined,
              "placeholder": "Add a list...",
              "value": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          false,
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ListForm should render SaveCancel if showSave is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ListForm
    showSave={true}
    textEntered=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="new-list indigo lighten-5"
>
        <input
                className="new-list-input"
                onChange={[Function]}
                onFocus={undefined}
                placeholder="Add a list..."
                value=""
        />
        <SaveCancel
                onClickCancel={undefined}
                onClickSave={undefined}
        />
</div>,
      "className": "list-wrapper",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <input
            className="new-list-input"
            onChange={[Function]}
            onFocus={undefined}
            placeholder="Add a list..."
            value=""
/>,
          <SaveCancel
            onClickCancel={undefined}
            onClickSave={undefined}
/>,
        ],
        "className": "new-list indigo lighten-5",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "new-list-input",
            "onChange": [Function],
            "onFocus": undefined,
            "placeholder": "Add a list...",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onClickCancel": undefined,
            "onClickSave": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="new-list indigo lighten-5"
>
          <input
                    className="new-list-input"
                    onChange={[Function]}
                    onFocus={undefined}
                    placeholder="Add a list..."
                    value=""
          />
          <SaveCancel
                    onClickCancel={undefined}
                    onClickSave={undefined}
          />
</div>,
        "className": "list-wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className="new-list-input"
              onChange={[Function]}
              onFocus={undefined}
              placeholder="Add a list..."
              value=""
/>,
            <SaveCancel
              onClickCancel={undefined}
              onClickSave={undefined}
/>,
          ],
          "className": "new-list indigo lighten-5",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "new-list-input",
              "onChange": [Function],
              "onFocus": undefined,
              "placeholder": "Add a list...",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "onClickCancel": undefined,
              "onClickSave": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
